user-service/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service-dev
          imagePullPolicy: Never  # Change/remove if using a registry
          ports:
            - containerPort: 3001
          command: ["npm", "run", "start:dev"  ]
