user-service/user-service-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-dev-service
spec:
  selector:
    app: user-dev-service
  ports:
    - port: 80
      targetPort: 3001
