user-service/user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: user.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: user-service
              port: 
                number: 80
